trunk/Archive2/16/20ea2aa1ec8cde/output
main.cpp: In function ‘int main()’:
main.cpp:5:27: error: unable to deduce ‘const auto*’ from ‘std::hex’
     auto const * p = std::hex; //error
                           ^
